client/styles/style.css
.container {
  position: relative;
  height: auto;
  width: auto;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
}

main {
  position: relative;
  margin-left: 68px;
  zindex:0;
}

.search-results {
  z-index: 2;
}

.folders {
  padding: 5px;
  font-size: 1.5em;
}

/*.snippets {
  position: relative;
  width: 200px;
  left: 0;
  right: 0;
  bottom: 0;
}*/

.editor {
  position: relative;
  width: auto;
  left: 0;
  right: 0;
  bottom: 0;
}

.snippet-title input {
  width: auto;
  font-size: 3em;
  float: left;
}

.CodeMirror {
  border: 2px solid #eee;
  margin-top: 10px;
  height: 70vh;
}

.annotations {
  border-left: 2px solid grey;
  min-height: 70vh;
}

.annotations > textarea {
  height: 60vh;
}

.tags {
  margin-top: 5px;
  margin-bottom: 5px;
  margin-left: 10px;
  clear: both;
}

.tags input {
  max-width: 100px;
}

.toggle-annotation {
  display: none;
}

.tag {
  margin-left: 10px
  float: left;
}

.folder-name {
  margin-left: 5px;
}

.center a {
  display: inline;
}

.center a:hover {
  background-color: transparent;
}

.side-nav {
  line-height: 3em;
}

#slide-out {
  font-size: 1.2rem;
  color: #3D3D3D;
  width: 240px;
  margin:0px;
  padding:0px;
  z-index:999;
}

#nav-mobile {
  line-height: 3em;
  width: 66px;
  left: 0;
  margin:0px;
  padding:0px;
  z-index: 999;
}

#search-icon {
  margin: 0px;
}

#add-folder-icon {
  margin: 0px;
}

.icon {
  width: 2rem;
}

#nav-mobile > li {
  padding: 0px;
  padding-left: 15px;
  margin-top: 0px;
  margin-bottom: 0px;
}

.nav-link {
  margin: 0px;
  padding-left: 0px;
}

